--- a/pi64_settings.json
+++ b/pi64_settings.json
@@ -6,9 +6,11 @@
   },
   "python.analysis.typeCheckingMode": "basic",
   "python.linting.maxNumberOfProblems": 20,
+  "python.linting.enabled": true,
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": true,
   "python.venvFolders": ["venv", "venv/"],
+  // "pylint.args": ["--rcfile=~/python/pylint.conf"],
   "editor.fontFamily": "Liberation Mono Bold",
   "editor.fontWeight": "bold",
   "editor.minimap.enabled": false,
@@ -28,7 +30,7 @@
   },
   "prettier.printWidth": 120,
   "markdown.preview.lineHeight": 1.3,
-  "markdown.preview.fontSize": 15,
+  "markdown.preview.fontSize": 16,
   "markdown.preview.fontFamily": "-system-ui, 'Ubuntu', 'Droid Sans', sans-serif",
   "files.autoSaveDelay": 1000,
   "python.testing.pytestArgs": [
