--- a/pi64_tmux.conf
+++ b/pi64_tmux.conf
@@ -47,9 +47,9 @@ set-option -g focus-events on
 # set -g default-terminal "xterm-256color" # This line used from internet
 # set -g default-terminal "screen-256color"
 # set-option -g default-terminal "screen-256color"
-set -g default-terminal "tmux-256color"
+# set -g default-terminal "tmux-256color"
 # set-option -g default-terminal "tmux-256color"
-# set-option -g default-terminal "xterm-256color"
+set-option -g default-terminal "xterm-256color"
 
 # Set Tc and or RGB Capability
 # set-option -sa terminal-overrides ',xterm-256color:RGB'
