--- a/pi64_settings.json
+++ b/pi64_settings.json
@@ -1,43 +1,25 @@
 {
-  "workbench.colorTheme": "Default Dark+",
-  "[python]": {
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true,
-  },
-  "python.linting.enabled": true,
-  "python.linting.maxNumberOfProblems": 20,
-  "python.testing.pytestEnabled": true,
-  "python.testing.unittestEnabled": true,
-  "python.venvFolders": ["venv", "venv/"],
-  "pylint.args": ["--rcfile=~/python/pylint.conf"],
-  "editor.fontFamily": "Liberation Mono Bold",
-  "editor.fontWeight": "bold",
-  "editor.minimap.enabled": false,
+  "editor.fontFamily": "Hack Nerd Font Mono",
   "editor.fontSize": 15,
-  "workbench.iconTheme": "material-icon-theme",
-  "editor.fontLigatures": true,
-  "[shellscript]": {
-    "editor.defaultFormatter": "foxundermoon.shell-format"
-  },
-  "workbench.startupEditor": "none",
+  "editor.fontWeight": "bold",
+  "diffEditor.codeLens": false,
+  "editor.minimap.enabled": false,
   "zenMode.hideLineNumbers": false,
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[css]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "prettier.printWidth": 120,
-  "markdown.preview.lineHeight": 1.3,
-  "markdown.preview.fontSize": 16,
-  "markdown.preview.fontFamily": "-system-ui, 'Ubuntu', 'Droid Sans', sans-serif",
-  "files.autoSaveDelay": 1000,
-  "python.testing.pytestArgs": [
-    "-v"
+  "markdown.preview.fontFamily": "Liberation Mono",
+  "python.analysis.autoFormatStrings": true,
+  "python.languageServer": "Jedi",
+  "files.autoSaveDelay": 3000,
+  "pylint.args": [
+    "--rcfile=~/python/pylint.conf",
   ],
-  "python.linting.pylintCategorySeverity.warning": "Error",
-  "python.linting.pylintCategorySeverity.convention": "Error",
-  "python.linting.pylintCategorySeverity.refactor": "Error",
-  "python.linting.pylintEnabled": true,
-  "python.analysis.logLevel": "Error"
+  "pylint.showNotifications": "off",
+  "tabnine.experimentalAutoImports": true,
+  "git.autofetch": true,
+  "files.autoSave": "afterDelay"
 }
+
+// "workbench.colorCustomizations": {
+//   "editorError.foreground": "#00000000",
+//   "editorWarning.foreground": "#00000000",
+//   "editorInfo.foreground": "#00000000"
+// },
