2023-09-25T02:05 - pi64: Auto commit
23268 Files update

--- a/pi64_settings.json
+++ b/pi64_settings.json
@@ -15,7 +15,7 @@
   "pylint.showNotifications": "off",
   "tabnine.experimentalAutoImports": true,
   "git.autofetch": true,
-  "files.autoSave": "afterDelay"
+  "workbench.startupEditor": "none"
 }
 
 // "workbench.colorCustomizations": {
